--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ MANIFEST
 
 # custom files
 note.txt
-
+.artifacts
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
